A bit more widht to avoid widht jumping when hiding/showing

--- a/core/assets/css/core.css
+++ b/core/assets/css/core.css
@@ -9,7 +9,7 @@ div.dialpatterns {
   display: none;
 }
 
-.btnwidth { width: 2em; }
+.btnwidth { width: 2.5em; }
 
 .save, .adv_set_default{border-style: none;}
 
